# triage-agent

./: .gitignore  AI_TOOLS.md  ARCHITECTURE-DECISIONS.md  DESIGN.md  LICENSE  README.md  notebook.ipynb  pyproject.toml
eval/: metrics.py  run.py  synthetic_llm.py
eval/adversarial/: adversarial_set.jsonl
eval/baselines/: naive.py  rule_only.py
eval/gold/: gold_set.jsonl
fixtures/: plan_templates.yaml
fixtures/okta/: sample_drift_additive.json  sample_drift_destructive.json  sample_unknown_source.json  sample_v1_clean.json
fixtures/tenants/: tenant_a.yaml  tenant_b.yaml
scripts/: capture_t3_fixture.py
src/triage/: demo.py
src/triage/adapters/: base.py  okta.py  registry.py
src/triage/api/: main.py
src/triage/audit/: ledger.py  redaction.py
src/triage/classifier/: pre_classify.py
src/triage/corrections/: endpoint.py  policy.py  store.py
src/triage/enrichment/: asset_cmdb.py  base.py  errors.py  fanout.py  historical.py  identity_store.py  (+3 more)
tests/: conftest.py  test_api.py  test_audit_governance.py  test_budget_override.py  test_correction_loop.py  test_enrichment_truncation.py  test_eval_harness.py  test_investigation_plan.py  test_notebook_executes.py  test_observability_spans.py  test_plan_extension.py  test_plan_gating.py  test_plan_templates.py  test_pre_classifier.py  test_reasoning_agent.py  test_retrieval.py  test_routing.py  test_schema_drift.py  test_schemas.py  test_source_adapter_okta.py  test_storm_grouping.py  test_t2_all_families.py  test_t3_escalation.py  test_tenant_isolation.py  test_validator.py  test_validator_terminal.py
(+17 files in other folders)
