[project]
name = "triage-agent"
version = "0.1.0"
description = "Triage assistant for security alerts; in-stream enrichment, not chatbot."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "httpx>=0.27",
    "anthropic>=0.40",
]

[project.scripts]
eval = "eval.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/triage", "eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
